Trying to make the mlm work well